--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 **/.DS_Store
 .Rhistory
 .Rapp.history 
+figs2/
+scratch/
+models/
+analyses/learning_model_comparisons/model_fits/
+analyses/learning_model_comparisons/power_analysis/
+analyses/learning_model_comparisons/preprocessed_data/
+human_experiments/
+individual_differences/
+analyses/p_true_analyses/stan_fits/
+analyses/p_true_analyses/*.csv
