--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,10 @@
 **/.DS_Store
 .Rhistory
 .Rapp.history 
-figs2/
-scratch/
-models/
-analyses/learning_model_comparisons/model_fits/
-analyses/learning_model_comparisons/power_analysis/
-analyses/learning_model_comparisons/preprocessed_data/
-human_experiments/
-individual_differences/
+analyses/learning_model_comparisons/model_fits/LLs/*.csv
+analyses/learning_model_comparisons/preprocessed_data/*.csv
 analyses/p_true_analyses/stan_fits/
 analyses/p_true_analyses/*.csv
+models/
+human_experiments/
+individual_differences/
