adding model data

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ analyses/p_true_analyses/stan_fits/
 analyses/p_true_analyses/*.csv
 analyses/NeurIPS_analyses/tmp_imgs/
 models/
+!paper_repo/data/models/
 human_experiments/
 individual_differences/
 figs/videos/
